{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 19,
  "lineage": "8015591d-a2e4-db52-6dce-cf43f5cf09e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:751212661018:internet-gateway/igw-01bc0dace2bd745f1",
            "id": "igw-01bc0dace2bd745f1",
            "owner_id": "751212661018",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            },
            "vpc_id": "vpc-0010bac5e0b839103"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_ecs_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:751212661018:loadbalancer/app/lb-ecs-lab/6b5e6c7c62818212",
            "arn_suffix": "app/lb-ecs-lab/6b5e6c7c62818212",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lb-ecs-lab-693519302.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:751212661018:loadbalancer/app/lb-ecs-lab/6b5e6c7c62818212",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lb-ecs-lab",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bfa2f4093182accb"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-016b32d04190e7ce4"
              },
              {
                "subnet_id": "subnet-02d279282ba4bf5dd"
              }
            ],
            "subnets": [
              "subnet-016b32d04190e7ce4",
              "subnet-02d279282ba4bf5dd"
            ],
            "tags": {
              "Name": "alb-ecs-lab"
            },
            "tags_all": {
              "Name": "alb-ecs-lab"
            },
            "vpc_id": "vpc-0010bac5e0b839103",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ecs_sg",
            "aws_subnet.eks_subnet1",
            "aws_subnet.eks_subnet2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "elb_lst_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:751212661018:listener/app/lb-ecs-lab/6b5e6c7c62818212/ef7a8b28dc012f21",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:751212661018:targetgroup/tg-ecs-lab/7df6f717b7f903b3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:751212661018:listener/app/lb-ecs-lab/6b5e6c7c62818212/ef7a8b28dc012f21",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:751212661018:loadbalancer/app/lb-ecs-lab/6b5e6c7c62818212",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb_ecs_lab",
            "aws_lb_target_group.elb_tg_lab",
            "aws_security_group.ecs_sg",
            "aws_subnet.eks_subnet1",
            "aws_subnet.eks_subnet2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "elb_tg_lab",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:751212661018:targetgroup/tg-ecs-lab/7df6f717b7f903b3",
            "arn_suffix": "targetgroup/tg-ecs-lab/7df6f717b7f903b3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:751212661018:targetgroup/tg-ecs-lab/7df6f717b7f903b3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-ecs-lab",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0010bac5e0b839103"
          },
          "dependencies": [
            "aws_lb.lb_ecs_lab",
            "aws_security_group.ecs_sg",
            "aws_subnet.eks_subnet1",
            "aws_subnet.eks_subnet2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:751212661018:route-table/rtb-0e478691e17b9315b",
            "id": "rtb-0e478691e17b9315b",
            "owner_id": "751212661018",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01bc0dace2bd745f1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0010bac5e0b839103"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077ec3ae7170b54a7",
            "route_table_id": "rtb-0e478691e17b9315b",
            "subnet_id": "subnet-02d279282ba4bf5dd"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.eks_subnet1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:751212661018:security-group/sg-0bfa2f4093182accb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65353
              }
            ],
            "id": "sg-0bfa2f4093182accb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20231123233705687400000001",
            "name_prefix": "terraform-",
            "owner_id": "751212661018",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0010bac5e0b839103"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:751212661018:subnet/subnet-02d279282ba4bf5dd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02d279282ba4bf5dd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "751212661018",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            },
            "vpc_id": "vpc-0010bac5e0b839103"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:751212661018:subnet/subnet-016b32d04190e7ce4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016b32d04190e7ce4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "751212661018",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            },
            "vpc_id": "vpc-0010bac5e0b839103"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:751212661018:vpc/vpc-0010bac5e0b839103",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0706052d9c65f5ab1",
            "default_route_table_id": "rtb-096db0137939e6132",
            "default_security_group_id": "sg-023f42a3598ccc840",
            "dhcp_options_id": "dopt-0e512bde996494979",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0010bac5e0b839103",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096db0137939e6132",
            "owner_id": "751212661018",
            "tags": {
              "Name": "vpc"
            },
            "tags_all": {
              "Name": "vpc"
            }
          }
        }
      ]
    }
  ]
}